--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,8 @@
 :root {
+ 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,6 +11,9 @@
 }
 * {
   box-sizing: border-box;
+}
+h1, h2, h3, h4, h5, h6 {
+  margin: 0
 }
 a {
   font-weight: 500;
@@ -42,7 +41,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--color-background)
+  color: var(var(--color-text))
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -61,19 +61,7 @@ button:focus-visible {
 #app {
   width: 100%;
   margin: 0;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
