--- a/src/style.css
+++ b/src/style.css
@@ -60,8 +60,10 @@ button:focus-visible {
 
 #app {
   width: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 1rem;
   text-align: center;
+  display: flex;
 }
 
