--- a/src/assets/styles/scss/_utility.scss
+++ b/src/assets/styles/scss/_utility.scss
@@ -18,6 +18,10 @@
 .p-3 {
   padding: 0.75rem;
 }
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 
 .tile {
   border-radius: $b-radius;
