--- a/src/style.css
+++ b/src/style.css
@@ -54,16 +54,12 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
-  padding: 2em;
-}
-
 #app {
   width: 100%;
   min-height: 100vh;
   margin: 0;
   padding: 1rem;
   text-align: center;
-  display: flex;
+  display: grid
 }
 
